--- a/EpicSchoolHomework/Info.plist
+++ b/EpicSchoolHomework/Info.plist
@@ -1,14 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Требуется доступ к геопозиции</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Требуется доступ к геопозиции</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Требуется доступ к фотопленке</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Требуется доступ к камере</string>
-</dict>
+<dict/>
 </plist>
